k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lightstreamer-dev
  labels:
    name: lightstreamer-dev
