k8s/lightstreamer-deployment.yaml
# Deployment of the Lightstreamer server cluster
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightstreamer-deployment
  labels:
    app: Lightstreamer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: Lightstreamer
  template:
    metadata:
      labels:
        app: Lightstreamer
    spec:
      containers:
      - name: lightstreamer
        image: lightstreamer
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: adapters-volume
            mountPath: /lightstreamer/adapters/RemoteStockList
      volumes:
        - name: adapters-volume
          configMap: 
            name: adapters
