k8s/lightstreamer-service.yaml
# Service exposing the Lightstreamer deployment
apiVersion: v1
kind: Service
metadata:
  name: Lightstreamer
spec:
  selector:
    app: Lightstreamer
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
