k8s/stocklist-service.yaml
# Service exposing the StockList deployment
apiVersion: v1
kind: Service
metadata:
  name: stocklist
spec:
  selector:
    app: stocklist
  type: ClusterIP
  ports:
    - name: metadata
      protocol: TCP
      port: 6663
      targetPort: metadata-port
    - name: data
      protocol: TCP
      port: 6661
      targetPort: data-port
