k8s/lightstreamer-ingress.yaml
# Ingress managing external accesss to the Lightstreamer service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Lightstreamer-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: Lightstreamer
            port:
              number: 8080
        path: /
        pathType: Prefix
